--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "react": "^16.6.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.0",
     "react-form": "^3.5.6",
+    "react-moment": "^0.8.3",
+    "react-quill": "^1.3.2",
     "react-redux": "^5.1.0",
+    "react-render-html": "^0.6.0",
+    "react-responsive-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-timeago": "^4.1.9",
+    "react-toastify": "^4.4.3",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
